--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -3,8 +3,10 @@
     :name => "Matisia",
     :role => "Front-end development",
     :date => "April 2015",
-    :live_link => "http://www.matisia.com",
-    :live_link_name => "www.matisia.com",
+    :live_link => {
+      url: "http://www.matisia.com",
+      name: "www.matisia.com"
+    },
     :content => [
       {
         type: "copy",
