--- a/source/work/ronik-awards.html.erb
+++ b/source/work/ronik-awards.html.erb
@@ -3,8 +3,10 @@
     :name => "Ronik Awards",
     :role => "Design & front-end development",
     :date => "May 2015",
-    :live_link => "http://www.ronikdesign.com/awards",
-    :live_link_name => "www.ronikdesign.com/awards",
+    :live_link => {
+      url: "http://www.ronikdesign.com/awards",
+      name: "www.ronikdesign.com/awards"
+    },
     :content => [
       {
         type: "copy",
