--- a/source/work/transforming-medicine.html.erb
+++ b/source/work/transforming-medicine.html.erb
@@ -3,8 +3,10 @@
     :name => "Transforming Medicine",
     :role => "Front-end development",
     :date => "February 2015",
-    :live_link => "http://www.transformingmedicine.org/",
-    :live_link_name => "www.transformingmedicine.org",
+    :live_link => {
+      url: "http://www.transformingmedicine.org/",
+      name: "www.transformingmedicine.org"
+    },
     :content => [
       {
         type: "copy",
