--- a/source/work/wellthy.html.erb
+++ b/source/work/wellthy.html.erb
@@ -3,8 +3,10 @@
     :name => "Wellthy",
     :role => "Front-end development",
     :date => "June 2015",
-    :live_link => "https://www.wellthy.com/",
-    :live_link_name => "www.wellthy.com",
+    :live_link => {
+      url: "https://www.wellthy.com/",
+      name: "www.wellthy.com"
+    },
     :content => [
         {
           type: "copy",
