--- a/source/stylesheets/global/_variables.scss
+++ b/source/stylesheets/global/_variables.scss
@@ -1,10 +1,8 @@
 $footer_height: 60px;
 
-$black: #000000;
+$black: #343531;
 $white: #ffffff;
-$highlight: #407B29;
-///#407B29;
-///#76981E;
+$highlight: #0E8234;
 
 $max_xs: 800px;
 $min_sm: 801px;
