add resume, closes #7

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -18,7 +18,7 @@ When I'm not working, I enjoy exploring (whether that be a new bookstore or a co
 
   <ul class="contact">
     <li>
-      <a href="/resume.pdf" download><i class="fa fa-file-text-o"></i>Download my resume</a>
+      <a href="/ksoldau_resume.pdf" download><i class="fa fa-file-text-o"></i>Download my resume</a>
     </li>
     <li>
       <a href="mailto:ksoldau@gmail.com"><i class="fa fa-envelope-o"></i>ksoldau@gmail.com</a>
