--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,7 +35,7 @@
             <%= link_to "Work", "/", :class => (current_page.data.page == "home" ? "nav__link active" : "nav__link") %>
           </li>
           <li class="nav__item">
-            <%= link_to "Resume", "/resume.pdf", :target => "_blank", :class => (current_page.data.page == "resume" ? "nav__link active" : "nav__link") %>
+            <%= link_to "Resume", "/ksoldau_resume.pdf", :target => "_blank", :class => "nav__link" %>
           </li>
           <li class="nav__item">
           <%= link_to "About", "/about.html", :class => (current_page.data.page == "about" ? "nav__link active" : "nav__link") %>
