copy changes, closes #2 #3 #4 #5 #6

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ page: "home"
 
 <div class="hero">
   <h1 class="hero__name">Katie Soldau</h1>
-  <p class="hero__desc">Hi! I'm a web developer with an interest in design, UI/UX, and development. In May 2016, I will graduate with a combined degree in Computer Science and Interactive Media.</p>
+  <p class="hero__desc">Hi! In May 2016, I will graduate with a combined degree in Computer Science and Interactive Media. I have an interest in web development, UX, and design.</p>
 </div>
 <div class="projects">
 <h2 class="projects__header">Recent Work</h2>
