--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -39,7 +39,8 @@
     padding: 0 0 10px 0;
   }
 }
-.proj-content .copy {
+.proj-content p {
+  padding-bottom: 24px;
   max-width: 450px;
 }
 .proj-image-wrap {
