--- a/source/work/human-ventures.html.erb
+++ b/source/work/human-ventures.html.erb
@@ -6,7 +6,7 @@
     :content => [
       {
         type: "copy",
-        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a responsive landing page for Human Ventures that could excite investors. The text on the landing page was unveiled via elegant scroll animations. Human Ventures is a startup studio that is committed to helping early-stage startups with talent, leadership, and resources. I worked on the front-end of the site with <a  target='_blank' href='http://maxlever.me/'>Max Lever</a>, who was another co-op. The client has the current control over the background image, content, and colors on the live site."
+        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a responsive landing page for Human Ventures that could excite investors. The text on the landing page was unveiled via elegant scroll animations. Human Ventures is a startup studio that is committed to helping early-stage startups with talent, leadership, and resources. I worked on the front-end of the site with <a  target='_blank' href='http://maxlever.me/'>Max Lever</a>, who was another co-op. In December 2015, Human Ventures changed their website in an effort to showcase their new portfolio work, so our work is no longer live on their site."
       },
       {
         type: "copy",
@@ -28,7 +28,7 @@
       {
         type: "copy",
         header: "Scroll Animations",
-        copy: "The landing page had many text animations that happened on scroll. These were done with <a target='_blank' href='http://janpaepke.github.io/ScrollMagic'>ScrollMagic</a>, as previously stated. We set up waypoints that would trigger certain animations, and calculated certain CSS properties based on the progress of the scroll."
+        copy: "The landing page had many text animations that occurred on scroll. These were done with <a target='_blank' href='http://janpaepke.github.io/ScrollMagic'>ScrollMagic</a>, as previously stated. We set up waypoints that would trigger certain animations, and calculated various CSS properties based on the progress of the scroll."
       },
       {
         type: "image",
