--- a/source/work/ronik-awards.html.erb
+++ b/source/work/ronik-awards.html.erb
@@ -10,7 +10,7 @@
     :content => [
       {
         type: "copy",
-        copy: "I added a responsive page to <a target='_blank' href='http://www.ronikdesign.com'>Ronik's</a> website while I worked there as a co-op. I designed and then built the Awards page with another co-op."
+        copy: "I added a responsive page to <a target='_blank' href='http://www.ronikdesign.com'>Ronik's</a> website while I worked there as a co-op. I designed and then built the Awards page with <a  target='_blank' href='http://maxlever.me/'>Max Lever</a>, another co-op."
       },
       {
         type: "copy",
