--- a/source/work/transforming-medicine.html.erb
+++ b/source/work/transforming-medicine.html.erb
@@ -10,11 +10,11 @@
     :content => [
       {
         type: "copy",
-        copy: "While on co-op at <a href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a marketing site for Transforming Medicine. Transforming Medicine is a non-profit organization that is aiming to match people with life-threatening illnesses to the best treatments for their condition. The client has the current control over the background image and the content, so the live site may not appear as it did when we first launched it."
+        copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that built a marketing site for Transforming Medicine. Transforming Medicine is a non-profit organization that is aiming to match people with life-threatening illnesses to the best treatments for their condition. The client has control over the background image and the content, so the live site may not appear exactly as it did when we first launched it."
       },
       {
         type: "copy",
-        copy: "We set up a CMS on <a href='http://www.webhook.com/'>Webhook</a>, used <a href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a> to scaffold the site, and styled in <a href='https://learnboost.github.io/stylus/'>Stylus</a>. For the numerous scroll interactions we used <a href='http://janpaepke.github.io/ScrollMagic'>ScrollMagic</a>."
+        copy: "We set up a CMS on <a target='_blank' href='http://www.webhook.com/'>Webhook</a>, used <a target='_blank' href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a> to scaffold the site, templated in <a target='_blank' href='http://paularmstrong.github.io/swig/'>Swig</a>, and styled in <a target='_blank' href='https://learnboost.github.io/stylus/'>Stylus</a>."
       },
       {
         type: "image",
