--- a/source/work/wellthy.html.erb
+++ b/source/work/wellthy.html.erb
@@ -10,11 +10,11 @@
     :content => [
         {
           type: "copy",
-          copy: "While on co-op at Ronik I worked on a team that created a web application for Wellthy, a health startup. Wellthy aims to provide affordable services to people who are caring for their sick or injured loved ones. They employ care coordinatos who are tasked with helping specific customers."
+          copy: "While on co-op at <a target='_blank' href='http://www.ronikdesign.com'>Ronik</a> I worked on a team that created a web application for Wellthy, a health startup. Wellthy aims to provide affordable services to people who are caring for their sick or injured loved ones. They employ care coordinators who are tasked with helping specific customers. I worked on part of the web application that you have to be logged in to see. The client has control over some colors and styles, so the site may not appear as it did when we first launched it."
         },
         {
           type: "copy",
-          copy: "As we waited for Wellthy's developers to finish the back-end, we began to statically code the front-end after designs were complete. The static version of the site was created with <a target='_blank' href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a>, so we templated in <a target='_blank' href='http://paularmstrong.github.io/swig/'>Swig</a> and styled in <a href='https://learnboost.github.io/stylus/' target='_blank'>Stylus</a>. Once the back-end was complete, we worked on converting our static pages to the Django site."
+          copy: "When we first began working on this project we created a static version of the site while we waited for Wellthy's developers to finish the back-end. The static version of the site was created with <a target='_blank' href='https://github.com/ronik-design/slush-stencil'>Slush Stencil</a>, so we templated in <a target='_blank' href='http://paularmstrong.github.io/swig/'>Swig</a> and styled in <a href='https://learnboost.github.io/stylus/' target='_blank'>Stylus</a>. Once the back-end was complete, we converted our static pages to the Django site."
         },
         {
           type: "image",
