--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -5,15 +5,12 @@ page: "about"
 <div class="headshot">
 </div>
 <div class="bio">
-  <p class="copy">
-    Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. Right now I am working with a team of designers and developers at <a href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts Media and Design. I am interested in all aspects of design, UI/UX, and development. However, most of my experience is in development work.
+  <p>Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. My focus has been on front-end engineering, but I am also interested in visual design and UX.</p>
+  <p>Right now I am working with a team of designers and web developers at <a target="_blank" href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts, Media and Design. I am also in the middle of creating an interactive installation for my senior capstone project.
   </p>
-  <p class="copy">
-    I am currently looking for an internship for Spring 2016, and for a post-grad job. Also, I am in the process applying for post-grad work.
+  <p>In my spare time I enjoy trying to get around on my penny board, geocaching, spending time in the woods, spending time in new cities, and thinking about the ethics of space exploration. One of my greatest achievements is placing first in an intense 24-hour scavenger hunt.
   </p>
-  <p class="copy">
-When I'm not working, I enjoy exploring (whether that be a new bookstore or a country on a different country), scavenger hunts, geocaching, and interactive theatre.
-  </p>
+
 
 
   <ul class="contact">
