picking a highlight color is hard

--- a/source/stylesheets/global/_variables.scss
+++ b/source/stylesheets/global/_variables.scss
@@ -2,7 +2,7 @@ $footer_height: 60px;
 
 $black: #343531;
 $white: #ffffff;
-$highlight: #55BE7D;
+$highlight: #3BCC72;
 
 $max_xs: 800px;
 $min_sm: 801px;
