--- a/source/stylesheets/global/_typography.scss
+++ b/source/stylesheets/global/_typography.scss
@@ -1,5 +1,6 @@
 body {
-  font-family: "Raleway";
+  font-family: "Raleway", Helvetica, sans-serif;
+  color: $black;
 }
 
 p {
@@ -12,8 +13,9 @@ a {
   text-decoration: none;
   color: $black;
   font-weight: 500;
-  transition: color 0.15s ease-in-out;
+
   &:hover {
+    transition: color 0.15s ease-in-out;
     color: $highlight;
   }
 }
