keep next option to right even on mobile when no previous option

--- a/source/stylesheets/pages/_work.scss
+++ b/source/stylesheets/pages/_work.scss
@@ -119,6 +119,7 @@
   > * {
     text-align: right;
   }
+  min-height: 1px;
   @media (max-width: $max-xs) {
     float: left;
     padding-right: 10px;
