delete excess commas in object

--- a/source/work/matisia.html.erb
+++ b/source/work/matisia.html.erb
@@ -27,13 +27,13 @@
       {
         type: "image",
         columns: 4,
-        url: "../images/work/matisia/consultants-mobile.png",
+        url: "../images/work/matisia/consultants-mobile.png"
       },
       {
         type: "image",
         edge: true,
         columns: 4,
-        url: "../images/work/matisia/news-mobile.png",
+        url: "../images/work/matisia/news-mobile.png"
       },
       {
         type: "copy",
