--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,7 +22,7 @@
 
     <%= javascript_include_tag  "all" %>
 
-    <!-- <link rel='shortcut icon' href='/favicon.ico?v=3' type='image/x-icon'/ > -->
+    <link rel='shortcut icon' href='/favicon.ico?v=4' type='image/x-icon'/ >
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
