bio copy update

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,9 +6,9 @@ page: "about"
 </div>
 <div class="bio">
   <p>Hi there! My name is Katie Soldau and I will graduate in May 2016 with a combined degree in Computer Science and Interactive Media from Northeastern University. My focus has been on front-end engineering, but I am also interested in visual design and UX.</p>
-  <p>Right now I am working with a team of designers and web developers at <a target="_blank" href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts, Media and Design. I am also in the middle of creating an interactive installation for my senior capstone project.
+  <p>Right now I am working with a team of designers and web developers at <a target="_blank" href="http://northeastern.edu/scout">Scout</a>, a student-run studio at Northeastern's College of Arts, Media and Design. I am also currently creating an interactive installation for my senior capstone project.
   </p>
-  <p>In my spare time I enjoy trying to get around on my penny board, geocaching, spending time in the woods, spending time in new cities, and thinking about the ethics of space exploration. One of my greatest achievements is placing first in an intense 24-hour scavenger hunt.
+  <p>In my spare time I enjoy trying to get around on my penny board, geocaching, spending time in the woods, spending time in new cities, and learning a little bit about a lot of things. One of my proudest achievements is placing first in an intense 24-hour scavenger hunt.
   </p>
 
 
